--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^7.0.2",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -51,6 +52,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
+    "rollup": "^4.28.1",
     "tailwindcss": "^3.4.16",
     "vite": "^6.0.1"
   }
